tests/cases/error/error_missing_include.out
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_missing_include.rapt:1:1
  |
1 | INCLUDE missing_file
  | ^^^^^^^^^^^^^^^^^^^^ Could not open [tests/cases/error/missing_file.rinc]: No such file or directory (os error 2)
2 |
  |
